fix: overflow-y-scroll

--- a/src/ui-components/error/error.style.scss
+++ b/src/ui-components/error/error.style.scss
@@ -1,7 +1,7 @@
 @import "../../assets/styles/variables";
 
 .error-background {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-color: #000;
   top: 0;
