--- a/src/ui-components/loading/loading.style.scss
+++ b/src/ui-components/loading/loading.style.scss
@@ -1,8 +1,7 @@
 @import "../../assets/styles/variables";
 
 .loading-background {
-  position: fixed;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   z-index: 998;
   background-color: #000;
